import { NavigationProp, RouteProp } from '@react-navigation/native';
import React from 'react';
import ShallowRenderer from 'react-test-renderer/shallow';
import Toast from 'react-native-toast-message';
import { PostBinPalletsMultistatusResponse } from '../../services/PalletManagement.service';
import { HIDE_ACTIVITY_MODAL, SHOW_ACTIVITY_MODAL } from '../../state/actions/Modal';
import { AsyncState } from '../../models/AsyncState';
import { AssignLocationScreen, binPalletsApiEffect, getFailedPallets } from './AssignLocation';
import { CLEAR_PALLETS, DELETE_PALLET } from '../../state/actions/Binning';
import { BinningPallet } from '../../models/Binning';

const defaultAsyncState: AsyncState = {
  error: null,
  isWaiting: false,
  result: null,
  value: null
};

const defaultScannedEvent = {
  type: undefined,
  value: undefined
};

const mockNavigate = jest.fn();
const mockIsFocused = jest.fn(() => true);
const mockGoBack = jest.fn();
// eslint-disable-next-line @typescript-eslint/ban-ts-comment
// @ts-ignore
const navigationProp: NavigationProp<any> = { navigate: mockNavigate, isFocused: mockIsFocused, goBack: mockGoBack };
const mockDispatch = jest.fn();

describe('Assign Location screen render tests', () => {
  const routeProp: RouteProp<any, string> = { key: '', name: 'AssignLocation' };

  it('renders screen with no items', () => {
    const renderer = ShallowRenderer.createRenderer();
    const testPallets: BinningPallet[] = [];

    renderer.render(<AssignLocationScreen
      palletsToBin={testPallets}
      isManualScanEnabled={false}
      binPalletsApi={defaultAsyncState}
      dispatch={jest.fn()}
      navigation={navigationProp}
      route={routeProp}
      scannedEvent={defaultScannedEvent}
      useEffectHook={jest.fn()}
    />);

    expect(renderer.getRenderOutput()).toMatchSnapshot();
  });

  it('renders screen with items', () => {
    const renderer = ShallowRenderer.createRenderer();
    const testPallets: BinningPallet[] = [
      {
        id: 1,
        expirationDate: 'today',
        firstItem: {
          itemDesc: 'pulitzer prize',
          itemNbr: 423,
          price: 12.2,
          quantity: 4,
          upcNbr: '65432'
        }
      },
      {
        id: 2,
        expirationDate: 'tomorrow',
        firstItem: {
          itemDesc: 'nobel peace',
          itemNbr: 45,
          price: 12,
          quantity: 2,
          upcNbr: '765432'
        }
      },
      {
        id: 3,
        expirationDate: 'yesterday',
        firstItem: {
          itemDesc: 'Newberry',
          itemNbr: 5,
          price: 12.95,
          quantity: 83,
          upcNbr: '23456789'
        }
      }
    ];

    renderer.render(<AssignLocationScreen
      palletsToBin={testPallets}
      isManualScanEnabled={false}
      binPalletsApi={defaultAsyncState}
      dispatch={jest.fn()}
      navigation={navigationProp}
      route={routeProp}
      scannedEvent={defaultScannedEvent}
      useEffectHook={jest.fn()}
    />);

    // TODO update snapshot after pallet card is added
    expect(renderer.getRenderOutput()).toMatchSnapshot();
  });

  it('renders screen with manual scan enabled', () => {
    const renderer = ShallowRenderer.createRenderer();
    const testPallets: BinningPallet[] = [];

    renderer.render(<AssignLocationScreen
      palletsToBin={testPallets}
      isManualScanEnabled={true}
      binPalletsApi={defaultAsyncState}
      dispatch={jest.fn()}
      navigation={navigationProp}
      route={routeProp}
      scannedEvent={defaultScannedEvent}
      useEffectHook={jest.fn()}
    />);

    expect(renderer.getRenderOutput()).toMatchSnapshot();
  });
});

describe('Assign Location externalized function tests', () => {
  afterEach(() => {
    jest.clearAllMocks();
  });

  const multiStatusData: PostBinPalletsMultistatusResponse = {
    binSummary: [
      { palletId: 1, status: 200 },
      { palletId: 2, status: 204 },
      { palletId: 3, status: 400 },
      { palletId: 4, status: 418 }
    ]
  };

  it('tests getFailedPallets when 207', () => {
    const resultData = getFailedPallets(multiStatusData);
    expect(resultData.length).toBe(3);
  });

  it('tests binPalletsApiEffect on 200', () => {
    const successApi: AsyncState = {
      ...defaultAsyncState,
      result: {
        status: 200
      }
    };
    binPalletsApiEffect(navigationProp, successApi, mockDispatch);
    expect(mockIsFocused).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: HIDE_ACTIVITY_MODAL }));
    expect(Toast.show).toBeCalledWith(expect.objectContaining({ type: 'success' }));
    expect(Toast.show).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: CLEAR_PALLETS }));
    expect(mockDispatch).toBeCalledTimes(3);
    expect(mockGoBack).toBeCalledTimes(1);
  });

  it('tests binPalletsApiEffect on 207', () => {
    const partialSuccessApi: AsyncState = {
      ...defaultAsyncState,
      result: {
        status: 207,
        data: multiStatusData
      }
    };

    binPalletsApiEffect(navigationProp, partialSuccessApi, mockDispatch);
    expect(mockIsFocused).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: HIDE_ACTIVITY_MODAL }));
    expect(Toast.show).toBeCalledWith(expect.objectContaining({ type: 'error' }));
    expect(Toast.show).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: DELETE_PALLET }));
    expect(mockDispatch).toBeCalledTimes(5);
    expect(mockGoBack).toBeCalledTimes(0);
  });

  it('tests binPalletsApiEffect on error', () => {
    const failApi: AsyncState = {
      ...defaultAsyncState,
      error: {
        status: 418,
        message: 'Im a teapot'
      }
    };

    binPalletsApiEffect(navigationProp, failApi, mockDispatch);
    expect(mockIsFocused).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: HIDE_ACTIVITY_MODAL }));
    expect(Toast.show).toBeCalledWith(expect.objectContaining({ type: 'error' }));
    expect(Toast.show).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledTimes(2);
  });

  it('tests binPalletsApiEffect on waiting', () => {
    const waitApi: AsyncState = {
      ...defaultAsyncState,
      isWaiting: true
    };

    binPalletsApiEffect(navigationProp, waitApi, mockDispatch);
    expect(mockIsFocused).toBeCalledTimes(1);
    expect(mockDispatch).toBeCalledWith(expect.objectContaining({ type: SHOW_ACTIVITY_MODAL }));
    expect(mockDispatch).toBeCalledTimes(1);
  });
});
