// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assign Location screen render tests renders screen with items 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <FlatList
    data={
      Array [
        Object {
          "expirationDate": "today",
          "firstItem": Object {
            "itemDesc": "pulitzer prize",
            "itemNbr": 423,
            "price": 12.2,
            "quantity": 4,
            "upcNbr": "65432",
          },
          "id": 1,
        },
        Object {
          "expirationDate": "tomorrow",
          "firstItem": Object {
            "itemDesc": "nobel peace",
            "itemNbr": 45,
            "price": 12,
            "quantity": 2,
            "upcNbr": "765432",
          },
          "id": 2,
        },
        Object {
          "expirationDate": "yesterday",
          "firstItem": Object {
            "itemDesc": "Newberry",
            "itemNbr": 5,
            "price": 12.95,
            "quantity": 83,
            "upcNbr": "23456789",
          },
          "id": 3,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#888888",
        "borderTopWidth": 1,
        "flexDirection": "column",
        "margin": 10,
        "padding": 5,
        "width": "95%",
      }
    }
  >
    <Memo(Pressable)
      onPress={[Function]}
    >
      <mockConstructor
        color="#0071e9"
        name="barcode-scan"
        size={70}
      />
    </Memo(Pressable)>
    <Text
      style={
        Object {
          "fontSize": 20,
        }
      }
    >
      [missing "en.BINNING.SCAN_LOCATION_PLURAL" translation]
    </Text>
  </View>
</View>
`;

exports[`Assign Location screen render tests renders screen with manual scan enabled 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <ManualScanComponent
    keyboardType="default"
    placeholder="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
  />
  <FlatList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#888888",
        "borderTopWidth": 1,
        "flexDirection": "column",
        "margin": 10,
        "padding": 5,
        "width": "95%",
      }
    }
  >
    <Memo(Pressable)
      onPress={[Function]}
    >
      <mockConstructor
        color="#0071e9"
        name="barcode-scan"
        size={70}
      />
    </Memo(Pressable)>
    <Text
      style={
        Object {
          "fontSize": 20,
        }
      }
    >
      [missing "en.BINNING.SCAN_LOCATION_PLURAL" translation]
    </Text>
  </View>
</View>
`;

exports[`Assign Location screen render tests renders screen with no items 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <FlatList
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#888888",
        "borderTopWidth": 1,
        "flexDirection": "column",
        "margin": 10,
        "padding": 5,
        "width": "95%",
      }
    }
  >
    <Memo(Pressable)
      onPress={[Function]}
    >
      <mockConstructor
        color="#0071e9"
        name="barcode-scan"
        size={70}
      />
    </Memo(Pressable)>
    <Text
      style={
        Object {
          "fontSize": 20,
        }
      }
    >
      [missing "en.BINNING.SCAN_LOCATION_PLURAL" translation]
    </Text>
  </View>
</View>
`;
